--- a/templates/index.html
+++ b/templates/index.html
@@ -186,8 +186,7 @@ document.getElementById("sidebar").style.width = "0";
 
   </div>
 
-  <div class="overlay d-flex align-items-center" style="background: url('{% static 'images/speed-xlabs.png' %}') no-repeat; background-size: cover;
-    ">
+  <div class="overlay d-flex align-items-center" style="background: url('{% static 'images/speed-xlabs.png' %}') no-repeat; background-size: cover;  ">
   <section id="intro" class="clearfix">
 
     <div class="container">
