--- a/virtusa/static/css/risk_quantification08.css
+++ b/virtusa/static/css/risk_quantification08.css
@@ -1,3 +1,43 @@
+body, button, input, select, optgroup, textarea {
+	color: #333;
+	font-family: 'Synthesis', sans-serif !important;
+	font-size: 15px !important;
+	line-height: 1.2 !important;
+}
+
+.main-container {
+ min-height: 100vh; /* will cover the 100% of viewport */
+ overflow: hidden;
+ display: block;
+ position: relative;
+ padding-bottom: 100px; /* height of your footer */
+}
+
+
+
+/* Back to top button */
+
+.back-to-top {
+  position: fixed;
+  display: none;
+  background: #007bff;
+  color: #fff;
+  width: 44px;
+  height: 44px;
+  text-align: center;
+  line-height: 1;
+  font-size: 16px;
+  border-radius: 50%;
+  right: 15px;
+  bottom: 15px;
+  transition: background 0.5s;
+  z-index: 11;
+}
+
+.back-to-top i {
+  padding-top: 12px;
+  color: #fff;
+}
 
 
 #header {
@@ -120,6 +160,16 @@
   background-size: cover;
   padding: 200px 0 120px 0;
 }
+
+#intro .intro-info .title {
+    font-size: 68px;
+    font-weight: 700;
+    color: #fff;
+    margin-top: 0;
+    margin-bottom: 25px;
+    text-align: center;
+}
+
 .border{
 
   border-radius: 1px solid #000;
@@ -448,7 +498,7 @@ img.max-img {
 }
 
 .row {
-	margin-bottom:30px;
+	/* margin-bottom:30px; */
 }
 
 header .cbp-af-header .row {
@@ -514,25 +564,27 @@ img.left {
 
 
 section#intro{
-	max-width: 100%;
-	background:#f5f5f5;
-	height:auto;
-	margin: 0 auto;
-	margin-top:80px;
-	padding: 0;
+  width: 100%;
+      position: relative;
+      /* background: url(../images/intro-bg.jpg) center bottom no-repeat; */
+      background:rgba(0,106, 165, 0.8);
+
+      background-size: cover;
+      padding: 200px 0 120px 0;
 	/* border-bottom:1px solid #e9e9e9; */
 	/* padding-top:60px; */
 	/* margin-bottom:40px; */
 }
 section#servicesNew {
-  max-width: 100%;
+  /* max-width: 100%;
   /* background:#e9ecef; */
-  height:auto;
-  margin: 0 auto;
+  /* height:auto;
+  margin: 0 auto; */
   /* margin-top:80px; */
-  padding: 0;
+  /* padding: 0; */
   /* border-bottom:1px solid #e9e9e9; */
-  padding-top:60px;
+   padding-top:23px;
+   background: #f2f2f2;
 
 }
 
@@ -560,11 +612,28 @@ section#bottom {
 
 .section-header p {
   text-align: center;
-  margin: auto;
+  /* margin: auto;
   font-size: 15px;
   padding-bottom: 60px;
   color: #556877;
-  width: 50%;
+  width: 50%; */
+  font-size: 17px;
+line-height: 1.5em;
+text-align: center;
+margin-bottom: 1.5em;
+
+}
+
+.section-header .title {
+
+  font-size: 20px;
+    font-family: 'Publico Headline Web', serif;
+    font-weight: 700;
+    color: #0275d8;
+    line-height: 1.7;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 39px;
 }
 
 section#subintro {
@@ -580,6 +649,25 @@ section#subintro {
 	float:right;
 	background:none;
 }
+
+.custom_breadcrumb .breadcrumb{
+background: #fff;
+
+}
+
+#filter {
+   padding: 10px 0 0px !important;
+   /* background: #f7f7f7; */
+
+   position: relative;
+}
+
+
+#table_data tr.selected{
+            background-color: #e92929 !important;
+            vertical-align: middle !important;
+            height: 4em;
+        }
 
 
 /* --- features ----*/
@@ -717,6 +805,18 @@ i.icon-bg-dark {
 
 	overflow:hidden;
 	margin-bottom:30px;
+  padding: 30px;
+  text-align: center;
+}
+
+.cta-box h3{
+
+      margin: 0 0 25px;
+      font-size: 32px;
+      font-weight: 800;
+      color: #333;
+      text-align: center;
+      font-family: "Publico Headline Web";
 }
 
 .cta-text {
@@ -739,21 +839,34 @@ i.icon-bg-dark {
   -moz-border-radius: 20px;
   border-radius: 20px;
 }
-.cta-box .cta input[type="file"]{
+ input[type="file"]{
     display: none;
 
 }
 
-.cta-box .cta input[type="button"]{
+ input[type="button"]{
     display: none;
 
-}.custom-upload{
+}
+
+.custom-upload{
     border:1px solid #666;
-    color:#fff!important;
+    color:#000!important;
     padding:1em;
-    background:#000;
+
     border-radius:4px;
     cursor:pointer;
+    ackground: #00FEFF;
+    display: inline-block;
+    border-radius: 50px;
+    padding: 11px 48px 10px 48px;
+
+    font-size: 15px;
+    font-weight: 600;
+    border: 1px solid #77dede;
+    font-family: 'Barlow', Arial;
+    margin-left: 25px;
+background: #00FEFF
 }
 
 
@@ -762,21 +875,88 @@ i.icon-bg-dark {
     border: 1px solid black;
 
 }
-#table-scroll {
-  height:700px;
-  overflow:auto;
 
 
+table thead th {
+
+    font-family: 'Publico Headline Web', serif;
+    font-weight: 700;
+    color: #0275d8;
 }
 
-#table_data table {
+
+
+/* #table_data.table-fixed {
+  width: 100%;
+  /* background-color: #f3f3f3; */
+/* }  */
+
+
+.table-fixed thead {
+  width: 97%;
+}
+.table-fixed tbody {
+  /* height: 230px;
+  overflow-y: auto;
+  width: 100%; */
+  /* height:700px;
+  overflow:auto; */
+}
+
+.table-fixed tbody tr{
+  /*  background-color: rgba(0,106, 165, 0.8);
+    /*height: 230px;
+    overflow-y: auto;
+    width: 100%;
+    height:700px;
+    overflow:auto; */
+}
+
+
+ #table-scroll {
+  height:700px;
+  overflow:auto;
+}
+
+#cbtn{
+  background: #00FEFF;
+      display: inline-block;
+      border-radius: 50px;
+      padding: 11px 48px 10px 48px;
+      color: #000;
+      font-size: 15px;
+      font-weight: 600;
+      border: 1px solid #77dede;
+      font-family: 'Barlow', Arial;
+          margin-left: 25px;
+}
+
+
+#Submit {
+
+  background: #00FEFF;
+      display: inline-block;
+      border-radius: 50px;
+      padding: 11px 48px 10px 48px;
+      color: #000;
+      font-size: 15px;
+      font-weight: 600;
+      border: 1px solid #77dede;
+      font-family: 'Barlow', Arial;
+          margin-left: 25px;
+  }
+
+
+
+
+/* #table_data table {
   border-collapse: collapse;
 
 }
 
 #table_data th, td {
   text-align: left;
-    border: 1px solid black;
+    /* border: 1px solid black;
 }
 
 
@@ -796,19 +976,29 @@ i.icon-bg-dark {
 
 }
 
-#table_data tr:nth-child(even){background-color: #f2f2f2;}
+#table_data tr:nth-child(even){
 
-#table_data tr:hover {background-color: #ddd;}
+  /* background-color: #f2f2f2; */
+
+}
+
+#table_data tr:hover {
+}
+  /* background-color: #ddd;
+
+}
 
 
 #table_data tr:nth-child(even)
-{background-color: #f2f2f2;}
+{
+  /* background-color: #f2f2f2;
+  }
 
 #table_data th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #4CAF50;
+  /* background-color: #4CAF50;
   color: white;
 }
 
@@ -876,154 +1066,96 @@ i.icon-bg-dark {
           }
           .editableTable .cellEditing input[type=text]{
              width:100%; border:0; background-color:rgb(255,253,210);
-           }
+           }  */
+
+.cellEditing{
+
+  background: red;
+}
+
+
            /*--------------------------------------------------------------
            # Footer
            --------------------------------------------------------------*/
 
-           #footer {
-             background: rgba(127, 137, 161, 0.3);
-             padding: 0 0 30px 0;
-             color: #eee;
-             font-size: 14px;
+           /*--------------------------------------------------------------
+           # Footer
+           --------------------------------------------------------------*/
+
+           .vn-site-footer {
+               display: block !important;
            }
 
-           #footer .footer-top {
-             background: rgba(127, 137, 161, 0.3);
-             padding: 60px 0 30px 0;
+           .site-footer .contact-form {
+               background: #252525;
+               width: 100%;
+               padding: 50px 80px;
            }
 
-           #footer .footer-top .footer-info {
-             margin-bottom: 30px;
+           .site-footer .contact-form, .site-footer .contact-sec {
+           	display: flex;
+           	align-items: center;
            }
 
-           #footer .footer-top .footer-info h3 {
-             font-size: 34px;
-             margin: 0 0 20px 0;
-             padding: 2px 0 2px 0;
-             line-height: 1;
-             font-family: "Montserrat", sans-serif;
-             color: #fff;
-             font-weight: 400;
-             letter-spacing: 3px;
-             text-transform: uppercase;
+           .vn-site-footer .contact-form .col-lg-12, .vn-site-footer .contact-form .col-lg-12 .contain {
+               padding: 0;
            }
 
-           #footer .footer-top .footer-info p {
-             font-size: 13px;
-             line-height: 24px;
-             margin-bottom: 0;
-             font-family: "Montserrat", sans-serif;
-             color: #ecf5ff;
+           .footer-menu {
+               display: block;
+               margin: 0;
            }
 
-           #footer .footer-top .social-links a {
-             font-size: 18px;
-             display: inline-block;
-             background: #007bff;
-             color: #fff;
-             line-height: 1;
-             padding: 8px 0;
-             margin-right: 4px;
-             border-radius: 50%;
-             text-align: center;
-             width: 36px;
-             height: 36px;
-             transition: 0.3s;
+           .vn-site-footer .site-title {
+               margin: 0;
            }
 
-           #footer .footer-top .social-links a:hover {
-             background: #0067d5;
-             color: #fff;
+           #colophons .site-title img {
+               width: 140px;
+               margin-bottom: 6px;
            }
 
-           #footer .footer-top h4 {
-             font-size: 14px;
-             font-weight: bold;
-             color: #fff;
-             text-transform: uppercase;
-             position: relative;
-             padding-bottom: 10px;
+           .footer-menu .site-branding img {
+               padding: 20px 15px;
            }
 
-           #footer .footer-top .footer-links {
-             margin-bottom: 30px;
+           .site-branding img {
+               max-width: 140px;
+               padding: 15px 0;
            }
 
-           #footer .footer-top .footer-links ul {
-             list-style: none;
-             padding: 0;
-             margin: 0;
+           .site-footer .soc {
+               margin: 15px 0 0;
+               padding-inline-start: 0px;
+
            }
 
-           #footer .footer-top .footer-links ul li {
-             padding: 8px 0;
+           .footer-menu ul li {
+               list-style: none;
+               text-align: left;
+           }
+           .soc li {
+               display: inline-block;
+               padding: 0 2% 0 0;
+           }
+           .footer-menu ul li a {
+               line-height: 2;
+               color: #666;
            }
 
-           #footer .footer-top .footer-links ul li:first-child {
-             padding-top: 0;
+           .vn-site-footer .privacy-links {
+               float: left;
            }
 
-           #footer .footer-top .footer-links ul a {
-             color: #ecf5ff;
+           .vn-site-footer .privacy-links li {
+               display: inline-block;
+               margin-right: 10px;
+               color: #666;
            }
 
-           #footer .footer-top .footer-links ul a:hover {
-             color: #74b5fc;
+           .vn-site-footer .privacy-links li:first-child a {
+               margin-right: 10px;
            }
-
-           #footer .footer-top .footer-contact {
-             margin-bottom: 30px;
-           }
-
-           #footer .footer-top .footer-contact p {
-             line-height: 26px;
-           }
-
-           #footer .footer-top .footer-newsletter {
-             margin-bottom: 30px;
-           }
-
-           #footer .footer-top .footer-newsletter input[type="email"] {
-             border: 0;
-             padding: 6px 8px;
-             width: 65%;
-           }
-
-           #footer .footer-top .footer-newsletter input[type="submit"] {
-             background: #007bff;
-             border: 0;
-             width: 35%;
-             padding: 6px 0;
-             text-align: center;
-             color: #fff;
-             transition: 0.3s;
-             cursor: pointer;
-           }
-
-           #footer .footer-top .footer-newsletter input[type="submit"]:hover {
-             background: #0062cc;
-           }
-
-           #footer .copyright {
-             text-align: center;
-             padding-top: 30px;
-           }
-
-           #footer .credits {
-             text-align: center;
-             font-size: 13px;
-             color: #f1f7ff;
-           }
-
-           #footer .credits a {
-             color: #bfddfe;
-           }
-
-           #footer .credits a:hover {
-             color: #f1f7ff;
-           }
-
 
            @media (min-width: 992px) {
              #testimonials .testimonial-item p {
@@ -1045,6 +1177,8 @@ i.icon-bg-dark {
              #intro {
                padding: 140px 0 60px 0;
              }
+
+
 
              #intro .intro-img {
                width: 80%;
