--- a/virtusa/static/css/style_updated16.css
+++ b/virtusa/static/css/style_updated16.css
@@ -54,7 +54,7 @@ h6 {
 .back-to-top {
   position: fixed;
   display: none;
-  background: #007bff;
+  background: #00FEFF;;
   color: #fff;
   width: 44px;
   height: 44px;
@@ -1534,6 +1534,9 @@ line-height: 1.7;
     line-height: 2;
     color: #666;
 }
+.footer-menu ul li a:hover {
+	 color: #00FEFF;
+ }
 
 .vn-site-footer .privacy-links {
     float: left;
