--- a/templates/indview.html
+++ b/templates/indview.html
@@ -117,7 +117,7 @@
                          }
 
                           name = cells[0].innerHTML? cells[0].innerHTML.trim():"";
-                          value = parseInt(cells[1].innerHTML ? cells[1].innerHTML.trim() : "");
+                          value = cells[1].innerHTML ? cells[1].innerHTML.trim() : "";
                           myMap.set(name, value);
                       }
 
